[bugfix] metaflow apptracing flame chart tooltip dispaly error
**Phenomenon and reproduction steps**

- metaflow apptracing
- flame chart, tooltip
- key line and value line display misalignment
- also reproduced in metaflow topo chart

**Root cause and solution**

- value has not make a non-null judgment
- p tag has no height in css

**Impactions**

none

**Test method**

- tooltip content
- key and value display one-to-one correspondence

**Affected branch(es)**

- main

**Checklist**

- [ ] Dependencies update required
- [ ] Common bug (similar problem in other repo)

--- a/metaflow-apptrace-panel/src/SimplePanel.css
+++ b/metaflow-apptrace-panel/src/SimplePanel.css
@@ -133,6 +133,7 @@
   font-size: 12px;
   padding: 0 4px;
   margin: 0;
+  height: 18px;
 }
 
 .flame-tooltip .labels-wrap {
